# Settings

./: .gitignore  create_environment  create_environment_auto  create_environment_docker  create_environment_mac.txt  install_passenger  会津  若松ジャンダルム とその他 402 件.vcf
BetterTouchTool/: B305DD21-4758-4050-9B5A-A0C64D483F44  bettertouchtool.bttlicense  btt_data_store.version_3_202_build_1378  btt_data_store.version_3_202_build_1378-shm  btt_data_store.version_3_202_build_1378-wal  btt_data_store.version_3_344_build_1552  btt_data_store.version_3_344_build_1552-shm  btt_data_store.version_3_344_build_1552-wal  btt_data_store.version_3_346_build_1554-shm  btt_data_store.version_3_346_build_1554-wal  bttdata2  bttdata2.oldVersionBackup0.921  bttdata2.oldVersionBackup0.931  bttdata2.oldVersionBackup0.934  bttdata2.oldVersionBackup0.9851  bttdata2.oldVersionBackup0.986  bttdata2.oldVersionBackup0.989  bttdata2.oldVersionBackup0.992  bttdata2.oldVersionBackup0.9951  bttdata2.oldVersionBackup0774
BetterTouchTool/Logs/: log-00C510.txt  (+46 more)
FireFox/: TabMIxPlus_pref
GoogleChrome/: Smooth_Gestures_Settings.html  vimium-options.json
Launchd/: dolipo.plist
bash/: .bashrc
network/: fukudahead  fukudanet  fukudanet-ifcfg  satnet
php/: php.ini
vim/: .viminfo  .vimrc  _vimrc
vim/VimDocs/VimWrapper-6eff74d11d2a/qvimwrapper/qVimWrapper/: CMakeLists.txt  FixQt4DebugBuild.cmake  README
vim/VimDocs/VimWrapper-6eff74d11d2a/qvimwrapper/qVimWrapper/qvimwrapper/: plog.cpp  plog.h  qvimlauncher.cpp  qvimlauncher.h
vim/VimDocs/VimWrapper-6eff74d11d2a/qvimwrapper/qVimWrapper/tests/: CMakeLists.txt  main.cpp
vim/VimDocs/VimWrapper-6eff74d11d2a/qvimwrapper/qVimWrapper/tests/unittest++/: Makefile  TimeHelpers.h
vim/VimDocs/VimWrapper-6eff74d11d2a/qvimwrapper/qVimWrapper/tests/unittest++/Posix/: TimeHelpers.cpp
zsh/:  (django の競合コピー 2017-05-24).zshenv  .zsh_history  .zshenv  .zshrc
(+300 files in other folders)
